--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ main {
   padding: 20px;
 }
 
-.container {
+.container { /* O jeito mais simples e seguro para centralizar uma Div */
   display: flex;
   flex-direction: column;
   align-items: normal;
